# apricity-build

./: .TODO.md.swp  .build.sh.swp  .gitignore  CREDITS.md  PATRONS  README.md  TODO.md  apps.md  build-releng.sh  build.sh  build32.sh  build64.sh  build_all.py  build_push_dev_iso.py  buildpush.sh  cinnamon.sh  deletebuild.sh  stabilify.sh
calamares/src/calamares/src/modules/partition/partitionmanager/: CHANGES  CMakeLists.txt  COPYING  INSTALL  README  README-CALAMARES.md  TODO
calamares/src/calamares/src/modules/partition/partitionmanager/calamares/: CMakeLists.txt  CalaPM.cpp  CalaPM.h  corebackendmanager.cpp  helpers.cpp
calamares/src/calamares/src/modules/partition/partitionmanager/calamares/fatlabel/: CMakeLists.txt
calamares/src/calamares/src/modules/partition/partitionmanager/calamares/kio/: KMountPointChecks.cmake  config-kmountpoint.h.in  global.h  kdiskfreespaceinfo.cpp  kdiskfreespaceinfo.h  kiocore_export.h  kmountpoint.cpp  kmountpoint.h
calamares/src/calamares/src/modules/partition/partitionmanager/cmake/modules/: FindMSGFMT.cmake
calamares/src/calamares/src/modules/partition/partitionmanager/doc/: CMakeLists.txt  appendix.docbook  copyhowto.docbook  credits.docbook  faq.docbook  glossary.docbook  index.docbook  installoshowto.docbook  introduction.docbook  referencemanual.docbook  resizehowto.docbook  usermanual.docbook
calamares/src/calamares/src/modules/partition/partitionmanager/icons/: CMakeLists.txt
calamares/src/calamares/src/modules/partition/partitionmanager/lib/: CMakeLists.txt
calamares/src/calamares/src/modules/partition/partitionmanager/lib/fatlabel/: CMakeLists.txt  buffer.c  buffer.h  charsetConv.c  devices.c  devices.h  dirCache.c  dirCache.h  directory.c  directory.h  fat.c  fat.h  fatlabel.c  fatlabel.h  file.c  file.h  file_name.c  file_name.h  force_io.c  force_io.h  fs.h  htable.c  htable.h  init.c  init.h  llong.c  llong.h  match.c  match.h  msdos.h  mtools.h  nameclash.h  partition.h  plain_io.c  plain_io.h  stream.c  stream.h  vfat.c  vfat.h
calamares/src/calamares/src/modules/partition/partitionmanager/scripts/: partitionmanagerapp.rb  release.rb  releasegui.rb
calamares/src/calamares/src/modules/partition/partitionmanager/scripts/release/: application.rb  releasebuilder.rb  releasecmd.rb  releasedialog.rb  releasedialog.ui  tagger.rb  translationstatsbuilder.rb
calamares/src/calamares/src/modules/partition/partitionmanager/src/: CMakeLists.txt  Messages.sh  config.kcfg  config.kcfgc  main.cpp  org.kde.PartitionManager.xml  partitionmanager.appdata.xml  partitionmanager.desktop
calamares/src/calamares/src/modules/partition/partitionmanager/src/backend/: corebackend.cpp  corebackend.h  corebackenddevice.cpp  corebackenddevice.h  corebackendmanager.cpp  corebackendmanager.h  corebackendpartition.cpp  corebackendpartition.h  corebackendpartitiontable.cpp  corebackendpartitiontable.h
calamares/src/calamares/src/modules/partition/partitionmanager/src/config/: advancedpagewidget.cpp  advancedpagewidget.h  configureoptionsdialog.cpp  configureoptionsdialog.h  configurepageadvanced.ui  configurepagefilesystemcolors.ui  configurepagegeneral.ui  filesystemcolorspagewidget.cpp  filesystemcolorspagewidget.h  generalpagewidget.cpp  generalpagewidget.h
calamares/src/calamares/src/modules/partition/partitionmanager/src/core/: copysource.cpp  copysource.h  copysourcedevice.cpp  copysourcedevice.h  copysourcefile.cpp  copysourcefile.h  copysourceshred.cpp  copysourceshred.h  copytarget.cpp  copytarget.h  copytargetdevice.cpp  copytargetdevice.h  copytargetfile.cpp  copytargetfile.h  device.cpp  device.h  devicescanner.cpp  devicescanner.h  mountentry.cpp  mountentry.h  operationrunner.cpp  operationrunner.h  operationstack.cpp  operationstack.h  partition.cpp  partition.h  partitionalignment.cpp  partitionalignment.h  partitionnode.cpp  partitionnode.h  partitionrole.cpp  partitionrole.h  partitiontable.cpp  partitiontable.h  smartattribute.cpp  smartattribute.h  smartstatus.cpp  smartstatus.h
calamares/src/calamares/src/modules/partition/partitionmanager/src/fs/: btrfs.cpp  btrfs.h  exfat.cpp  exfat.h  ext2.cpp  ext2.h  ext3.cpp  ext3.h  ext4.cpp  ext4.h  extended.cpp  extended.h  fat16.cpp  fat16.h  fat32.cpp  fat32.h  filesystem.cpp  filesystem.h  filesystemfactory.cpp  filesystemfactory.h  hfs.cpp  hfs.h  hfsplus.cpp  hfsplus.h  hpfs.cpp  hpfs.h  jfs.cpp  jfs.h  linuxswap.cpp  linuxswap.h  luks.cpp  luks.h  lvm2_pv.cpp  lvm2_pv.h  nilfs2.cpp  nilfs2.h  ntfs.cpp  ntfs.h  ocfs2.cpp  ocfs2.h  (+14 more)
calamares/src/calamares/src/modules/partition/partitionmanager/src/gui/: applyprogressdetailswidget.cpp  applyprogressdetailswidget.h  applyprogressdetailswidgetbase.ui  applyprogressdialog.cpp  applyprogressdialog.h  applyprogressdialogwidget.cpp  applyprogressdialogwidget.h  applyprogressdialogwidgetbase.ui  createpartitiontabledialog.cpp  createpartitiontabledialog.h  createpartitiontablewidget.cpp  createpartitiontablewidget.h  createpartitiontablewidgetbase.ui  decryptluksdialog.cpp  decryptluksdialog.h  decryptluksdialogwidget.cpp  decryptluksdialogwidget.h  decryptluksdialogwidgetbase.ui  devicepropsdialog.cpp  devicepropsdialog.h  devicepropswidget.cpp  devicepropswidget.h  devicepropswidgetbase.ui  editmountoptionsdialog.cpp  editmountoptionsdialog.h  editmountoptionsdialogwidget.cpp  editmountoptionsdialogwidget.h  editmountoptionsdialogwidgetbase.ui  editmountpointdialog.cpp  editmountpointdialog.h  editmountpointdialogwidget.cpp  editmountpointdialogwidget.h  editmountpointdialogwidgetbase.ui  filesystemsupportdialog.cpp  filesystemsupportdialog.h  filesystemsupportdialogwidget.cpp  filesystemsupportdialogwidget.h  filesystemsupportdialogwidgetbase.ui  formattedspinbox.cpp  formattedspinbox.h  (+51 more)
calamares/src/calamares/src/modules/partition/partitionmanager/src/jobs/: backupfilesystemjob.cpp  backupfilesystemjob.h  checkfilesystemjob.cpp  checkfilesystemjob.h  copyfilesystemjob.cpp  copyfilesystemjob.h  createfilesystemjob.cpp  createfilesystemjob.h  createpartitionjob.cpp  createpartitionjob.h  createpartitiontablejob.cpp  job.cpp  (+20 more)
(+2357 files in other folders)
